[package]
name = "cloudflare_intra_dyndns"
version = "0.1.2"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.3.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.2", features = ["json", "rustls", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.20.0", features = ["aio", "tokio-comp"] }
toml = "0.5.8"
anyhow = "1.0.38"
directories-next = "2.0.0"
clap = "3.0.0-beta.2"
